# NexusTrader

./: .gitignore  .gitmodules  .readthedocs.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  run_pm2.sh  setup.py  start_redis.sh
.keys/: .gitignore  config_demo.cfg  settings.toml
benchmark/: aiosonic_aiohttp.py  cache_performance_test.py  orjson_msgspec.py  picows_benchmark.py  test_nautilius_clock.py  test_orjson_protobuffer  test_zmq_pynng.py  trade_data.proto  trade_data_pb2.py  type_creation.py  websockets_benchmark.py
docs/: LICENSE  Makefile  pyproject.toml  requirements.txt
example/: async_cache.py  asyncio_raise_error.py  binance_calculate_ratio.py  binance_calculate_trend.py  binance_get_listen_key.py  binance_place_order.py  binance_place_order_aiohttp.py  binance_pm_account.py  binance_rest_api_v2.py  binance_subscribe_book_ticker.py  binance_subscribe_kline.py  binance_subscribe_trade.py  binance_subscribe_user_data_stream.py  binance_subsribe_book_ticker.py  binance_websocket_client.py  binance_ws_connector.py  bybit_place_order.py  bybit_pos.py  bybit_private_connector.py  bybit_public_connector.py  bybit_subscribe_bookl1.py  bybit_subscribe_orderbook.py  bybiy_close_all.py  ccxt_generate_markets.py  close_pos.py  conf.py  demo_strategy.py  event_system_example.py  gen_password.py  json_format_benchmark.py  loop.py  okx_place_order.py  okx_private_conn.py  okx_private_connector.py  okx_rest_api.py  okx_subscribe_account.py  okx_subscribe_order.py  okx_subscribe_orderbook.py  okx_subscribe_position.py  okx_subscribe_public_data.py  (+18 more)
nexustrader/: config.py  constants.py  (+4 more)
(+224 files in other folders)
