[tool.poetry]
name = "tradebot"
version = "0.1.0"
description = "fastest python trading bot"
authors = ["River-Shi <nachuan.shi.quant@gmail.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "3.10.5"
asynciolimiter = "1.0.0"
ccxt = "4.4.6"
numpy = "2.1.1"
orjson = "3.10.10"
pyinstrument = "4.7.3"
pytest = "8.3.2"
redis = "5.0.8"
requests = "2.32.3"
spdlog = "2.0.6"
streamz = "0.6.4"
uvloop = "0.20.0"
websockets = "13.1"
picows = "1.5.0"
aiosonic = "0.21.0"
msgspec = "0.18.6"
cython = "3.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
